SpringBoot默认的backlog日志

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,22 @@
 spring.security.user.name=zhaoyang
 spring.security.user.password=123456
+
+
+#日志相关配置
+
+#日志级别：trace > debug > info(默认) > warn > error
+#zhaoyang.study包下的所有类的日志级别是debug级
+logging.level.zhaoyang.study=debug
+
+#生成日志文件：默认相对路径
+#可以指定完整路径
+#和logging.path一起用会覆盖后者
+logging.file=springboot.log
+
+#在当前目录所在磁盘的根目录下创建/spring/log目录，并在该目录下创建spring.log文件
+logging.path=/spring/log
+
+#变更控制台输出的日志格式
+logging.pattern.console=%d{yyyy-MM-dd} [%thread] %-5level %logger{50} - %msg%n
+#变更日志文件的日志格式
+logging.pattern.file=%d{yyyy-MM-dd} === [%thread] === %-5level === %logger{50} === %msg%n
